# spikestats

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  charter.md  logo-prompt.md
examples/: summary.py
src/spikestats/: __init__.py  _validate.py  metrics.py  time_resolved.py
tests/: test_metrics.py  test_properties.py  test_time_resolved.py
